--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -67,6 +67,9 @@ jobs:
               body: output
             })
 
+      - name: Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
       
 
       - name: Terraform Apply
